objects/YouTube_Video_Statistics__c/YouTube_Video_Statistics__c.object-meta.xml
<CustomObject>
    <label>YouTube Video Statistics</label>
    <nameField>
        <displayFormat>YTS{0000}</displayFormat>
        <label>YouTube Stats#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YouTube Video Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>