objects/YouTube_Video_Statistics__c/fields/Favorites__c.field-meta.xml
<CustomField>
    <fullName>Favorites__c</fullName>
    <label># Favorites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>