objects/YouTube_Video_Statistics__c/fields/YouTube_Video__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Video__c</fullName>
    <label>YouTube Video</label>
    <referenceTo>YouTube_Video__c</referenceTo>
    <relationshipName>Youtube_Statistics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>